# siwx-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  release.sh
.github/workflows/: publish.yml
examples/: basic_usage.rs  public_key_usage.rs  signature_verification.rs
src/: chain.rs  error.rs  lib.rs  message.rs  public_key.rs  signature.rs  utils.rs  verifier.rs
src/backend/: ethereum.rs  mod.rs  solana.rs
